[gd_scene load_steps=19 format=4 uid="uid://vmidq7nosied"]

[ext_resource type="PackedScene" uid="uid://chqk46eexaulh" path="res://Scenes/Car-1/Car-1.tscn" id="1_85fin"]
[ext_resource type="Script" uid="uid://b4u0sutqs4tmi" path="res://Scenes/Levels/Trial/trial.gd" id="1_a4v3o"]
[ext_resource type="Texture2D" uid="uid://de0viho6q01fa" path="res://Assets/Free Pixel Art Hill/Free Pixel Art Hill/PREVIEWS/Hills Free (update 3.0).png" id="1_nv0p5"]
[ext_resource type="PackedScene" uid="uid://b03jc4v8kasvy" path="res://Scenes/Levels/Red.tscn" id="2_dtsok"]
[ext_resource type="Texture2D" uid="uid://lrvb3uvjb6ph" path="res://Assets/desert-ruins.png" id="2_kfs0o"]
[ext_resource type="PackedScene" uid="uid://cqqns4lbmyko6" path="res://Scenes/Levels/Blue.tscn" id="2_omxta"]
[ext_resource type="Texture2D" uid="uid://4a5dv4kc8pwb" path="res://Assets/TILESET_MOON_CAVE_BY_ CUBIC TREE - GRAPHICS/TILESET_MOON_CAVE_BY_ CUBIC TREE - GRAPHICS/TILESET_MOON_CAVE_BY_ CUBIC TREE - GRAPHICS.png" id="3_85fin"]
[ext_resource type="Texture2D" uid="uid://4c1115hf6ks6" path="res://Assets/stringstar fields/tileset.png" id="7_w0wam"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_omxta"]
size = Vector2(82.6082, 75.3867)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_a4v3o"]
texture = ExtResource("2_kfs0o")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_dtsok"]
texture = ExtResource("3_85fin")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -5.71429, 8, -5.71429, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -5.71429, 8, -5.71429, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -5.71429, 8, -5.71429, 8, 8, -8, 8)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -5.71429, 8, -5.71429, 8, 8, -8, 8)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:0/0 = 0
7:0/0 = 0
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:1/0 = 0
7:1/0 = 0
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -5.71429, 8, -5.71429, 8, 8, -8, 8)
1:3/0 = 0
1:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -5.71429, 8, -5.71429, 8, 8, -8, 8)
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -5.71429, 8, -5.71429, 8, 8, -8, 8)
3:3/0 = 0
3:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_fgtni"]
texture = ExtResource("7_w0wam")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
6:7/0 = 0
7:7/0 = 0
9:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
0:9/0 = 0
0:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
17:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0

[sub_resource type="TileSet" id="TileSet_omxta"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_a4v3o")
sources/1 = SubResource("TileSetAtlasSource_dtsok")
sources/2 = SubResource("TileSetAtlasSource_fgtni")

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_85fin"]

[sub_resource type="Animation" id="Animation_dtsok"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_a4v3o"]
resource_name = "new_animation"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_omxta"]
_data = {
&"RESET": SubResource("Animation_dtsok"),
&"space": SubResource("Animation_a4v3o")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a4v3o"]
size = Vector2(20, 112)

[node name="Trial" type="Node2D"]
script = ExtResource("1_a4v3o")

[node name="blue" parent="." instance=ExtResource("2_omxta")]
position = Vector2(721, 185)
rotation = 2.40187
scale = Vector2(0.393433, 0.393433)

[node name="in" type="Area2D" parent="blue"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="blue/in"]
position = Vector2(-0.000244141, 0)
shape = SubResource("RectangleShape2D_omxta")

[node name="red" parent="." instance=ExtResource("2_dtsok")]
position = Vector2(766, 125)
scale = Vector2(0.393433, 0.393433)

[node name="car-1" parent="." instance=ExtResource("1_85fin")]
position = Vector2(-149, 111)

[node name="TileMapLayer" type="TileMapLayer" parent="."]
position = Vector2(0, -20)
tile_map_data = PackedByteArray("AAACAAsAAQABAAEAAAACAAwAAQABAAEAAAACAA0AAQABAAEAAAACAA4AAQABAAEAAAACAA8AAQABAAEAAAACABAAAQABAAEAAAADAAsAAQABAAEAAAADAAwAAQABAAEAAAADAA0AAQABAAEAAAADAA4AAQABAAEAAAADAA8AAQABAAEAAAADABAAAQABAAEAAAAEAAsAAQACAAEAAAAEAAwAAQACAAEAAAAEAA0AAQACAAEAAAAEAA4AAQACAAEAAAAEAA8AAQACAAEAAAAEABAAAQACAAEAAAACAAkAAQABAAAAAAACAAoAAQABAAEAAAADAAkAAQABAAAAAAADAAoAAQABAAEAAAAEAAkAAQACAAAAAAAEAAoAAQACAAEAAAAJAAsAAQAAAAAAAAAJAAwAAQAAAAEAAAAJAA0AAQAAAAEAAAAJAA4AAQAAAAEAAAAJAA8AAQAAAAEAAAAJABAAAQAAAAEAAAAJABEAAQAAAAEAAAAJABIAAQAAAAEAAAAKAAsAAQACAAAAAAAKAAwAAQACAAEAAAAKAA0AAQACAAEAAAAKAA4AAQACAAEAAAAKAA8AAQACAAEAAAAKABAAAQACAAEAAAAKABEAAQACAAEAAAAKABIAAQACAAEAAAAMAAsAAQAAAAAAAAAMAAwAAQABAAEAAAAMAA0AAQABAAEAAAAMAA4AAQABAAEAAAAMAA8AAQABAAEAAAAMABAAAQABAAEAAAAMABEAAQABAAEAAAAMABIAAQABAAEAAAANAAsAAQABAAAAAAANAAwAAQABAAEAAAANAA0AAQABAAEAAAANAA4AAQABAAEAAAANAA8AAQABAAEAAAANABAAAQABAAEAAAANABEAAQABAAEAAAANABIAAQABAAEAAAAOAAsAAQABAAAAAAAOAAwAAQABAAEAAAAOAA0AAQABAAEAAAAOAA4AAQABAAEAAAAOAA8AAQABAAEAAAAOABAAAQABAAEAAAAOABEAAQABAAEAAAAOABIAAQABAAEAAAAPAAsAAQABAAAAAAAPAAwAAQABAAEAAAAPAA0AAQABAAEAAAAPAA4AAQABAAEAAAAPAA8AAQABAAEAAAAPABAAAQABAAEAAAAPABEAAQABAAEAAAAPABIAAQABAAEAAAAQAAsAAQABAAAAAAAQAAwAAQABAAEAAAAQAA0AAQABAAEAAAAQAA4AAQABAAEAAAAQAA8AAQABAAEAAAAQABAAAQABAAEAAAAQABEAAQABAAEAAAAQABIAAQABAAEAAAARAAsAAQABAAAAAAARAAwAAQABAAEAAAARAA0AAQABAAEAAAARAA4AAQABAAEAAAARAA8AAQABAAEAAAARABAAAQABAAEAAAARABEAAQABAAEAAAARABIAAQABAAEAAAABAAkAAQABAAAAAAABAAoAAQABAAEAAAABAAsAAQABAAEAAAABAAwAAQABAAEAAAABAA0AAQABAAEAAAABAA4AAQABAAEAAAABAA8AAQABAAEAAAABABAAAQABAAEAAAAAAAkAAQABAAAAAAAAAAoAAQABAAEAAAAAAAsAAQABAAEAAAAAAAwAAQABAAEAAAAAAA0AAQABAAEAAAAAAA4AAQABAAEAAAAAAA8AAQABAAEAAAAAABAAAQABAAEAAAD//wkAAQABAAAAAAD//woAAQABAAEAAAD//wsAAQABAAEAAAD//wwAAQABAAEAAAD//w0AAQABAAEAAAD//w4AAQABAAEAAAD//w8AAQABAAEAAAD//xAAAQABAAEAAAD+/wkAAQABAAAAAAD+/woAAQABAAEAAAD+/wsAAQABAAEAAAD+/wwAAQABAAEAAAD+/w0AAQABAAEAAAD+/w4AAQABAAEAAAD+/w8AAQABAAEAAAD+/xAAAQABAAEAAAD9/wkAAQABAAAAAAD9/woAAQABAAEAAAD9/wsAAQABAAEAAAD9/wwAAQABAAEAAAD9/w0AAQABAAEAAAD9/w4AAQABAAEAAAD9/w8AAQABAAEAAAD9/xAAAQABAAEAAAD8/wkAAQABAAAAAAD8/woAAQABAAEAAAD8/wsAAQABAAEAAAD8/wwAAQABAAEAAAD8/w0AAQABAAEAAAD8/w4AAQABAAEAAAD8/w8AAQABAAEAAAD8/xAAAQABAAEAAAD7/wkAAQABAAAAAAD7/woAAQABAAEAAAD7/wsAAQABAAEAAAD7/wwAAQABAAEAAAD7/w0AAQABAAEAAAD7/w4AAQABAAEAAAD7/w8AAQABAAEAAAD7/xAAAQABAAEAAAD6/wkAAQABAAAAAAD6/woAAQABAAEAAAD6/wsAAQABAAEAAAD6/wwAAQABAAEAAAD6/w0AAQABAAEAAAD6/w4AAQABAAEAAAD6/w8AAQABAAEAAAD6/xAAAQABAAEAAAD5/wkAAQABAAAAAAD5/woAAQABAAEAAAD5/wsAAQABAAEAAAD5/wwAAQABAAEAAAD5/w0AAQABAAEAAAD5/w4AAQABAAEAAAD5/w8AAQABAAEAAAD5/xAAAQABAAEAAAD4/wkAAQABAAAAAAD4/woAAQABAAEAAAD4/wsAAQABAAEAAAD4/wwAAQABAAEAAAD4/w0AAQABAAEAAAD4/w4AAQABAAEAAAD4/w8AAQABAAEAAAD4/xAAAQABAAEAAAD3/wkAAQABAAAAAAD3/woAAQABAAEAAAD3/wsAAQABAAEAAAD3/wwAAQABAAEAAAD3/w0AAQABAAEAAAD3/w4AAQABAAEAAAD3/w8AAQABAAEAAAD3/xAAAQABAAEAAAD2/wkAAQABAAAAAAD2/woAAQABAAEAAAD2/wsAAQABAAEAAAD2/wwAAQABAAEAAAD2/w0AAQABAAEAAAD2/w4AAQABAAEAAAD2/w8AAQABAAEAAAD2/xAAAQABAAEAAAD1/wkAAQACAAAAABD1/woAAQACAAEAABD1/wsAAQACAAEAABD1/wwAAQACAAEAABD1/w0AAQACAAEAABD1/w4AAQACAAEAABD1/w8AAQACAAEAABD1/xAAAQACAAEAABASAAsAAQABAAAAAAASAAwAAQABAAEAAAASAA0AAQABAAEAAAASAA4AAQABAAEAAAASAA8AAQABAAEAAAASABAAAQABAAEAAAASABEAAQABAAEAAAASABIAAQABAAEAAAATAAsAAQABAAAAAAATAAwAAQABAAEAAAATAA0AAQABAAEAAAATAA4AAQABAAEAAAATAA8AAQABAAEAAAATABAAAQABAAEAAAATABEAAQABAAEAAAATABIAAQABAAEAAAAUAAsAAQABAAAAAAAUAAwAAQABAAEAAAAUAA0AAQABAAEAAAAUAA4AAQABAAEAAAAUAA8AAQABAAEAAAAUABAAAQABAAEAAAAUABEAAQABAAEAAAAUABIAAQABAAEAAAAVAAsAAQABAAAAAAAVAAwAAQABAAEAAAAVAA0AAQABAAEAAAAVAA4AAQABAAEAAAAVAA8AAQABAAEAAAAVABAAAQABAAEAAAAVABEAAQABAAEAAAAVABIAAQABAAEAAAAWAAsAAQABAAAAAAAWAAwAAQABAAEAAAAWAA0AAQABAAEAAAAWAA4AAQABAAEAAAAWAA8AAQABAAEAAAAWABAAAQABAAEAAAAWABEAAQABAAEAAAAWABIAAQABAAEAAAAXAAsAAQABAAAAAAAXAAwAAQABAAEAAAAXAA0AAQABAAEAAAAXAA4AAQABAAEAAAAXAA8AAQABAAEAAAAXABAAAQABAAEAAAAXABEAAQABAAEAAAAXABIAAQABAAEAAAAYAAsAAQACAAAAAAAYAAwAAQABAAEAAAAYAA0AAQABAAEAAAAYAA4AAQABAAEAAAAYAA8AAQABAAEAAAAYABAAAQABAAEAAAAYABEAAQABAAEAAAAYABIAAQABAAEAAAAaAAwAAQAAAAMAAAAbAAwAAQABAAMAAAAcAAwAAQACAAMAAAAgAA0AAQAAAAMAAAAhAA0AAQABAAMAAAAiAA0AAQACAAMAAAAkAA0AAQAAAAMAAAAlAA0AAQABAAMAAAAmAA0AAQACAAMAAAAoAA0AAQAAAAMAAAApAA0AAQABAAMAAAAqAA0AAQACAAMAAAAtAAkAAQAAAAAAAAAtAAoAAQAAAAEAAAAtAAsAAQAAAAEAAAAuAAkAAQABAAAAAAAuAAoAAQABAAEAAAAuAAsAAQABAAEAAAAvAAkAAQACAAAAAAAvAAoAAQACAAEAAAAvAAsAAQACAAEAAAAtAAwAAQAAAAEAAAAuAAwAAQABAAEAAAAvAAwAAQACAAEAAAAtAA0AAQAAAAEAAAAtAA4AAQAAAAEAAAAuAA0AAQABAAEAAAAuAA4AAQABAAEAAAAvAA0AAQACAAEAAAAvAA4AAQACAAEAAAAtAA8AAQAAAAEAAAAtABAAAQAAAAIAAAAuAA8AAQABAAEAAAAuABAAAQABAAIAAAAvAA8AAQACAAEAAAAvABAAAQACAAIAAAAzAAwAAgAAAAkAAAAzAA0AAgAAAAkAAAA0AA0AAgAAAAkAAAA1AA0AAgAAAAkAAAA2AA0AAgAAAAkAAAA3AA0AAgAAAAkAAAA4AA0AAgAAAAkAAAA5AA0AAgAAAAkAAAA6AA0AAgAAAAkAAAA7AA0AAgAAAAkAAAA8AA0AAgAAAAkAAAA9AA0AAgAAAAkAAAA+AA0AAgAAAAkAAAA/AA0AAgAAAAkAAABAAA0AAgAAAAkAAABBAA0AAgAAAAkAAABCAA0AAgAAAAkAAABDAA0AAgAAAAkAAABEAA0AAgAAAAkAAABFAA0AAgAAAAkAAABGAA0AAgAAAAkAAABHAA0AAgAAAAkAAABIAA0AAgAAAAkAAABIAAwAAgAAAAkAAABHAAwAAgAAAAkAAABGAAwAAgAAAAkAAABFAAwAAgAAAAkAAABEAAwAAgAAAAkAAABDAAwAAgAAAAkAAABCAAwAAgAAAAkAAABBAAwAAgAAAAkAAABAAAwAAgAAAAkAAAA/AAwAAgAAAAkAAAA+AAwAAgAAAAkAAAA9AAwAAgAAAAkAAAA8AAwAAgAAAAkAAAA7AAwAAgAAAAkAAAA6AAwAAgAAAAkAAAA5AAwAAgAAAAkAAAA4AAwAAgAAAAkAAAA3AAwAAgAAAAkAAAA2AAwAAgAAAAkAAAA1AAwAAgAAAAkAAAA0AAwAAgAAAAkAAAAzAAgAAgAAAAUAAAAzAAkAAgAAAAYAAAAzAAoAAgAAAAcAAAAzAAsAAgAAAAgAAAA0AAgAAgABAAUAAAA0AAkAAgABAAYAAAA0AAoAAgABAAcAAAA0AAsAAgABAAgAAAA1AAgAAgACAAUAAAA1AAkAAgACAAYAAAA1AAoAAgACAAcAAAA1AAsAAgACAAgAAAA2AAgAAgADAAUAAAA2AAkAAgADAAYAAAA2AAoAAgADAAcAAAA2AAsAAgADAAgAAAA3AAsAAgAEAAgAAAA4AAsAAgAFAAgAAAA5AAoAAgAGAAcAAAA5AAsAAgAGAAgAAAA6AAoAAgAHAAcAAAA6AAsAAgAHAAgAAAA7AAsAAgAIAAgAAAA8AAsAAgAJAAgAAAA9AAsAAgAKAAgAAABIAAgAAgAAAAUAABBHAAgAAgABAAUAABBGAAgAAgACAAUAABBFAAgAAgADAAUAABBIAAkAAgAAAAYAABBHAAkAAgABAAYAABBGAAkAAgACAAYAABBFAAkAAgADAAYAABBIAAoAAgAAAAcAABBHAAoAAgABAAcAABBGAAoAAgACAAcAABBFAAoAAgADAAcAABBCAAoAAgAGAAcAABBBAAoAAgAHAAcAABBIAAsAAgAAAAgAABBHAAsAAgABAAgAABBGAAsAAgACAAgAABBFAAsAAgADAAgAABBEAAsAAgAEAAgAABBDAAsAAgAFAAgAABBCAAsAAgAGAAgAABBBAAsAAgAHAAgAABBAAAsAAgAIAAgAABA/AAsAAgAJAAgAABA+AAsAAgAKAAgAABAyAA0AAgAEAAYAAGAyAAwAAgAFAAYAAGAyAAsAAgAHAAcAAGAzAA4AAgACAAIAAAAzAA8AAgACAAMAAAAzABAAAgACAAQAAAA2AA4AAgACAAIAABA2AA8AAgACAAMAABA2ABAAAgACAAQAABA3AA4AAgACAAIAABA3AA8AAgACAAMAABA3ABAAAgACAAQAABA4AA4AAgAAAAQAACA5AA4AAgABAAQAACA7AA4AAgAAAAQAADA6AA4AAgABAAQAADA9AA4AAgABAAQAACA8AA4AAgAAAAQAACA+AA4AAgAAAAQAACA/AA4AAgABAAQAACBAAA4AAgABAAQAADBBAA4AAgAAAAQAADBCAA4AAgAAAAQAACBDAA4AAgAAAAQAACBEAA4AAgABAAQAACBFAA4AAgABAAQAADBGAA4AAgAAAAQAADBHAA4AAgAAAAQAACBIAA4AAgABAAQAACA=")
tile_set = SubResource("TileSet_omxta")

[node name="BG" type="Node2D" parent="."]
z_index = -1
position = Vector2(-52, 5)
scale = Vector2(1.41788, 1.41788)

[node name="HillsFree(update3_0)" type="Sprite2D" parent="BG"]
position = Vector2(256, 130)
texture = ExtResource("1_nv0p5")

[node name="HillsFree(update3_0)2" type="Sprite2D" parent="BG"]
position = Vector2(-252, 130)
texture = ExtResource("1_nv0p5")

[node name="HillsFree(update3_0)3" type="Sprite2D" parent="BG"]
position = Vector2(768, 130)
texture = ExtResource("1_nv0p5")

[node name="Node2D" type="Node2D" parent="."]

[node name="death" type="Area2D" parent="Node2D"]
position = Vector2(104, 216)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/death"]
shape = SubResource("WorldBoundaryShape2D_85fin")

[node name="stop" type="Label" parent="."]
offset_left = -128.0
offset_top = 100.0
offset_right = 1862.0
offset_bottom = 649.0
scale = Vector2(0.032368, 0.032368)
theme_override_colors/font_color = Color(6.73831e-07, 0.577515, 0.724292, 1)
theme_override_font_sizes/font_size = 200
text = "Don't Stop OR Crash
Start your life (A / D)"
visible_characters = 0
visible_ratio = 0.0

[node name="anim" type="AnimationPlayer" parent="stop"]
libraries = {
&"": SubResource("AnimationLibrary_omxta")
}
autoplay = "space"

[node name="space" type="Label" parent="."]
offset_left = 44.0
offset_top = 65.0
offset_right = 3315.0
offset_bottom = 1166.0
scale = Vector2(0.0510491, 0.0510491)
theme_override_colors/font_color = Color(1, 0.168627, 0, 1)
theme_override_font_sizes/font_size = 200
text = "Your inner self(SPACE) 
holds the power to cross any path
(Then A/D again)"
visible_characters = 0
visible_ratio = 0.0

[node name="anim" type="AnimationPlayer" parent="space"]
libraries = {
&"": SubResource("AnimationLibrary_omxta")
}

[node name="space2" type="Area2D" parent="."]
position = Vector2(23, 137)

[node name="CollisionShape2D" type="CollisionShape2D" parent="space2"]
position = Vector2(-9, -26)
shape = SubResource("RectangleShape2D_a4v3o")

[node name="slow" type="Label" parent="."]
offset_left = 287.0
offset_top = 100.0
offset_right = 2790.0
offset_bottom = 1201.0
scale = Vector2(0.0491683, 0.0491683)
theme_override_colors/font_color = Color(1, 0.168627, 0, 1)
theme_override_font_sizes/font_size = 200
text = "LIFE Slow (Space)
             ==
    HAPPINESS ( A/D again )"
visible_characters = 0
visible_ratio = 0.0

[node name="anim" type="AnimationPlayer" parent="slow"]
libraries = {
&"": SubResource("AnimationLibrary_omxta")
}

[node name="slow2" type="Area2D" parent="."]
position = Vector2(248, 179)

[node name="CollisionShape2D" type="CollisionShape2D" parent="slow2"]
position = Vector2(-9, -26)
shape = SubResource("RectangleShape2D_a4v3o")

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="blue/in" to="." method="_on_in_body_entered"]
[connection signal="body_entered" from="Node2D/death" to="." method="_on_death_body_entered"]
[connection signal="body_entered" from="space2" to="." method="_on_space_2_body_entered"]
[connection signal="body_entered" from="slow2" to="." method="_on_slow_2_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
